# PKGH-PR-2023-02

./: .gitignore  package.json
.github/workflows/: docker-image.yml
BackEnd/: example.env  pyproject.toml
BackEnd/src/: alembic.ini  app.py  main.py
BackEnd/src/alembic/: env.py
BackEnd/src/alembic/versions/: 39caa24eaf6e_add_is_admin_parametr_for_user.py  6ea7ddde1d23_add_goods_and_reviews.py  9c9a2a8beee3_change_product_description_type.py  b47a379f2402_add_stars_for_goods_reviews_and_change_.py  e200df7a34a2_wtf.py
BackEnd/src/api/: base_router.py  cart_objects.py  goods.py  users.py
BackEnd/src/core/: settings.py
BackEnd/src/models/: cart.py  goods.py  user.py
BackEnd/src/models/schemas/: cart_object_create.py  cart_object_response.py  product_create.py  product_response.py
BackEnd/src/services/: cart_objects.py  categories.py  exception.py  goods.py  manufactures.py  users.py
Docker/: docker-compose.yaml
Docker/backend/: Dockerfile  example.env
Docker/frontend/: Dockerfile
Docker/nginx/: Dockerfile  nginx.conf
backend/: pyproject.toml
backend/src/: app.py  main.py
backend/src/api/: base_router.py  category.py  goods.py  manufacture.py  picture.py  users.py
backend/src/db/: db.py
backend/src/models/: cart.py  categories.py  manufactures.py  pictures.py  review.py  user_password.py
backend/src/services/: cart_objects.py  categories.py  exception.py  pictures.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/data/: cart.data.ts  product.data.ts
(+57 files in other folders)
