[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["00XAH00 <pxaxulin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.1"
python-dotenv = "^0.21.1"
psycopg2 = "^2.9.5"
alembic = "^1.9.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
